support for restarts

--- a/dataset_transforms/icon_to_zarr.ipynb
+++ b/dataset_transforms/icon_to_zarr.ipynb
@@ -23,9 +23,7 @@
    "source": [
     "logging.basicConfig()\n",
     "logger = logging.getLogger(\"icon2zarr\")\n",
-    "logger.setLevel(logging.INFO)\n",
-    "\n",
-    "time_coder = xr.coders.CFDatetimeCoder(use_cftime=True)"
+    "logger.setLevel(logging.INFO)"
    ]
   },
   {
@@ -58,7 +56,7 @@
     "    curr_conf = config[subset]\n",
     "    timechunk = curr_conf[\"chunks\"][\"time\"]\n",
     "\n",
-    "    ds = xr.open_mfdataset(files, chunks=curr_conf[\"chunks\"], decode_times=time_coder)\n",
+    "    ds = xr.open_mfdataset(files, chunks=curr_conf[\"chunks\"], use_cftime=True)\n",
     "    if subset == \"2d\":\n",
     "        out_ds = process_2d(curr_conf, ds)\n",
     "    elif subset == \"3d\":\n",
@@ -67,9 +65,10 @@
     "        raise RuntimeError(\"Unknown subset type\")\n",
     "    out_ds = remap_tools.remap_delaunay(out_ds, zoom)\n",
     "    logger.info(f\"Trying to write to {outfile}\")\n",
-    "    zarr_tools.create_zarr_structure(\n",
-    "        path=outfile, outds=out_ds, timechunk=timechunk, order=zoom\n",
-    "    )\n",
+    "    if not outfile.exists():\n",
+    "        zarr_tools.create_zarr_structure(\n",
+    "            path=outfile, outds=out_ds, timechunk=timechunk, order=zoom\n",
+    "        )\n",
     "    zarr_tools.write_parts(outds=out_ds, path=outfile, time_chunk=24)\n",
     "    return out_ds, outfile\n",
     "\n",
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -130,8 +129,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6min 5s, sys: 2min 28s, total: 8min 33s\n",
-      "Wall time: 6min 5s\n"
+      "CPU times: user 5min 9s, sys: 1min 9s, total: 6min 18s\n",
+      "Wall time: 3min 42s\n"
      ]
     }
    ],
@@ -139,8 +138,8 @@
     "%%time\n",
     "output_dir = \"/scratch/k/k202134/icon_remapped\"\n",
     "config = yaml.safe_load(open(\"icon_to_zarr.yaml\"))\n",
-    "! rm -rf /scratch/k/k202134/icon_remapped/ICON_3d_z5.zarr\n",
-    "! rm -rf /scratch/k/k202134/icon_remapped/ICON_2d_z5.zarr\n",
+    "#! rm -rf /scratch/k/k202134/icon_remapped/ICON_3d_z5.zarr\n",
+    "#! rm -rf /scratch/k/k202134/icon_remapped/ICON_2d_z5.zarr\n",
     "\n",
     "for subset in (\"3d\", \"2d\"):\n",
     "    for zoom in (5,):\n",
@@ -155,9 +154,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/k/k202134/python-envs/easy/lib/python3.12/site-packages/xarray/backends/api.py:652: RuntimeWarning: 'netcdf4' fails while guessing\n",
+      "  engine = plugins.guess_engine(filename_or_obj)\n",
+      "/home/k/k202134/python-envs/easy/lib/python3.12/site-packages/xarray/backends/api.py:652: RuntimeWarning: 'scipy' fails while guessing\n",
+      "  engine = plugins.guess_engine(filename_or_obj)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fff80480410>"
+       "<matplotlib.image.AxesImage at 0x7f03d331aae0>"
       ]
      },
      "execution_count": 6,
@@ -189,7 +198,8 @@
     "\n",
     "egh.healpix_show(\n",
     "    xr.open_dataset(\n",
-    "        \"/scratch/k/k202134/icon_remapped/ICON_3d_z5.zarr\", decode_times=time_coder\n",
+    "        \"/scratch/k/k202134/icon_remapped/ICON_3d_z5.zarr\",\n",
+    "        use_cftime=True,\n",
     "    )[\"u\"].isel(time=2, height=50)\n",
     ")"
    ]
@@ -200,9 +210,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/k/k202134/python-envs/easy/lib/python3.12/site-packages/xarray/backends/api.py:652: RuntimeWarning: 'netcdf4' fails while guessing\n",
+      "  engine = plugins.guess_engine(filename_or_obj)\n",
+      "/home/k/k202134/python-envs/easy/lib/python3.12/site-packages/xarray/backends/api.py:652: RuntimeWarning: 'scipy' fails while guessing\n",
+      "  engine = plugins.guess_engine(filename_or_obj)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fff78167560>"
+       "<matplotlib.image.AxesImage at 0x7f03d00c61b0>"
       ]
      },
      "execution_count": 7,
@@ -232,7 +252,8 @@
    "source": [
     "egh.healpix_show(\n",
     "    xr.open_dataset(\n",
-    "        \"/scratch/k/k202134/icon_remapped/ICON_2d_z5.zarr\", decode_times=time_coder\n",
+    "        \"/scratch/k/k202134/icon_remapped/ICON_2d_z5.zarr\",\n",
+    "        use_cftime=True,\n",
     "    )[\"t_s\"].isel(time=2),\n",
     "    cmap=\"inferno\",\n",
     ")"
